The header part is completely finishe (with RWD)

--- a/index.html
+++ b/index.html
@@ -22,25 +22,29 @@
                     Jeffery Cannon
                 </a>
                 <div id="menu-list"
-                    class="bg-[#eae8e1] flex justify-between items-center flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row w-full sm:w-full md:w-[652px] lg:w-[652px] xl:w-[652px] 2xl:w-[652px]  h-[400px] sm:h-[400px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto absolute sm:absolute md:static lg:static xl:static 2xl:static top-[100px] left-0 pb-[30px] sm:pb-[30px] md:pb-0 lg:pb-0 xl:pb-0 2xl:pb-0 transition-all duration-500 ease-in-out">
+                    class="bg-[#eae8e1] flex justify-between items-center flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row w-full sm:w-full md:w-[710px] lg:w-[710px] xl:w-[710px] 2xl:w-[710px]  h-[400px] sm:h-[400px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto absolute sm:absolute md:static lg:static xl:static 2xl:static top-[100px] left-0 pb-[30px] sm:pb-[30px] md:pb-0 lg:pb-0 xl:pb-0 2xl:pb-0 transition-all duration-500 ease-in-out">
                     <ul
-                        class="flex flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row justify-between items-center capitalize  w-full sm:w-full md:w-[442px] lg:w-[442px] xl:w-[442px] 2xl:w-[442px] h-[300px] sm:h-[300px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto  text-[#333333] font-manrope text-[18px] font-medium  py-[60px] sm:py-[60px] md:py-0 lg:py-0 xl:py-0 2xl:py-0">
-                        <li>
+                        class="flex flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row justify-between items-center capitalize  w-full sm:w-full md:w-[500px] lg:w-[500px] xl:w-[500px] 2xl:w-[500px] h-[300px] sm:h-[300px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto  text-[#333333] font-manrope text-[18px] font-medium  py-[60px] sm:py-[60px] md:py-0 lg:py-0 xl:py-0 2xl:py-0">
+                        <li
+                            class="py-[14px] px-[24px] rounded-[8px] bg-[#F5F3F0]  transition-all duration-300 ease-in-out cursor-pointer">
                             <a href="#">
                                 home
                             </a>
                         </li>
-                        <li>
+                        <li
+                            class="py-[14px] px-[24px] rounded-[8px] hover:bg-[#f5f3f081] transition-all duration-200 ease-in-out">
                             <a href="#">
                                 about me
                             </a>
                         </li>
-                        <li>
+                        <li
+                            class="py-[14px] px-[24px] rounded-[8px] hover:bg-[#f5f3f081] transition-all duration-200 ease-in-out">
                             <a href="#">
                                 portofilo
                             </a>
                         </li>
-                        <li>
+                        <li
+                            class="py-[14px] px-[24px] rounded-[8px] hover:bg-[#f5f3f081] transition-all duration-200 ease-in-out">
                             <a href="#">
                                 contact me
                             </a>
