Hero section added to this project and fully ended with RWD

--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body>
+<body class="bg-[#ece8e1]">
     <!-- --------------------------------------- header section started --------------------------------------- -->
-    <header class="bg-[#eae8e1]">
+    <header id="header" class="  border-b-[1px] border-solid border-[#E1DBD1]">
         <div class="container sm:w-[1596px] mx-auto">
-            <nav id="navBar"
-                class="w-full  flex items-center justify-between h-[100px] border-b-[1px] sm:border-b-[1px] md:border-b-0 lg:border-b-0 xl:border-b-0 2xl:border-b-0 border-solid border-[#E1DBD1]">
+            <nav id="navBar" class="w-full  flex items-center justify-between h-[100px]">
                 <a href="#"
                     class="title text-[#5700FF] font-semibold text-[24px] leading-[32px] font-manrope ml-[20px] sm:ml-0 md:ml-0 lg:ml-0 xl:ml-0 2xl:ml-0">
                     Jeffery Cannon
                 </a>
                 <div id="menu-list"
-                    class="bg-[#eae8e1] flex justify-between items-center flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row w-full sm:w-full md:w-[710px] lg:w-[710px] xl:w-[710px] 2xl:w-[710px]  h-[400px] sm:h-[400px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto absolute sm:absolute md:static lg:static xl:static 2xl:static top-[100px] left-0 pb-[30px] sm:pb-[30px] md:pb-0 lg:pb-0 xl:pb-0 2xl:pb-0 transition-all duration-500 ease-in-out">
+                    class="z-50 bg-[#eae8e1] flex justify-between items-center flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row w-full sm:w-full md:w-[710px] lg:w-[710px] xl:w-[710px] 2xl:w-[710px]  h-[400px] sm:h-[400px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto absolute sm:absolute md:static lg:static xl:static 2xl:static top-[101px] left-0 pb-[30px] sm:pb-[30px] md:pb-0 lg:pb-0 xl:pb-0 2xl:pb-0 transition-all duration-500 ease-in-out">
                     <ul
-                        class="flex flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row justify-between items-center capitalize  w-full sm:w-full md:w-[500px] lg:w-[500px] xl:w-[500px] 2xl:w-[500px] h-[300px] sm:h-[300px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto  text-[#333333] font-manrope text-[18px] font-medium  py-[60px] sm:py-[60px] md:py-0 lg:py-0 xl:py-0 2xl:py-0">
+                        class="flex flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row justify-between items-center capitalize  w-full sm:w-full md:w-[500px] lg:w-[500px] xl:w-[500px] 2xl:w-[500px] h-[300px] sm:h-[300px] md:h-auto lg:h-auto xl:h-auto 2xl:h-auto  text-[#333333] font-manrope text-[18px] font-medium  py-[60px] sm:py-[60px] md:py-0 lg:py-0 xl:py-0 2xl:py-0  ">
                         <li
                             class="py-[14px] px-[24px] rounded-[8px] bg-[#F5F3F0]  transition-all duration-300 ease-in-out cursor-pointer">
                             <a href="#">
@@ -64,8 +63,93 @@
         </div>
     </header>
     <!-- ---------------------------------------/ header section ended --------------------------------------- -->
+
+
+
+    <!-- --------------------------------------- hero section started --------------------------------------- -->
+    <section id="hero" class=" relative   px-[20px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
+        <div class="container sm:w-[1596px] mx-auto">
+            <div
+                class="wrapper  flex items-center justify-between flex-col-reverse sm:flex-col-reverse md:flex-col-reverse lg:flex-row 2xl:flex-row">
+                <div class="left w-full sm:w-full md:w-full lg:w-[50%] xl:w-[50%] 2xl:w-[54%] min-h-[692px]  flex flex-col justify-between mt-0 sm:mt-0 md:mt-0 lg:mt-0 xl:mt-0 2xl:mt-[56px] 
+                py-0 sm:py-[32px] md:py-[32px] lg:py-[32px] xl:py-[32px] 2xl:py-0">
+                    <div
+                        class="w-full min-h-[433px]  flex flex-col  items-center sm:items-center md:items-start xl:items-start 2xl:items-start justify-between pt-[46px] sm:pt-[46px] md:pt-0 lg:pt-0 xl:pt-0 2xl:pt-0">
+                        <div class="w-[220px] h-[62px] bg-[#F5F3F0] rounded-[13px] grid place-content-center">
+                            <h4 class="text-[#4D4D4D] font-manrope font-medium text-[28px] leading-[42px]">
+                                Hello There 🤗
+                            </h4>
+                        </div>
+                        <h2
+                            class="text-[#1A1A1A] text-[42px] sm:text-[42px] md:text-[58px] lg:text-[58px] xl:text-[58px] 2xl:text-[58px] font-manrope font-semibold leading-[42px] sm:leading-[44px] md:leading-[52px] lg:leading-[56px] xl:leading-[85px] 2xl:leading-[85px] text-center sm:text-center md:text-left lg:text-left xl:text-left 2xl:text-left">
+                            Jeffery Cannon Welcome’s You!
+                        </h2>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] leading-[22px] sm:leading-[22px] md:leading-[27px] lg:leading-[27px] xl:leading-[27px] 2xl:leading-[27px] font-normal font-manrope pr-1 text-center sm:text-center md:text-left lg:text-left xl:text-left 2xl:text-left">
+                            I am a passionate and experienced web designer, dedicated to creating visually stunning and
+                            highly functional websites. Explore my portfolio to see the power of effective design in
+                            action
+                        </p>
+                        <div
+                            class="w-[90%] sm:w-[66%] md:w-[66%] lg:w-[66%] xl:w-[66%] 2xl:w-[50%] h-[64px] flex items-center justify-between">
+                            <button
+                                class="w-[160px] h-[60px] rounded-[8px] flex justify-evenly items-center bg-[#5700FF] hover:bg-[#3546c8] active:bg-[#2b3aad] transition-all duration-300 ease-out">
+                                <img src="./assets/images/navPhone.svg" alt="svg" class="w-[21px] h-[21px]">
+                                <p class="text-[#FDFDFC] font-manrope text-[18px] font-medium">Book a Call</p>
+                            </button>
+                            <a href="#"
+                                class="text-[#1A1A1A] hover:text-[#353535ad] text-[18px] leading-[27px] font-medium font-manrope">
+                                View Portfolio ->
+                            </a>
+                        </div>
+                    </div>
+                    <div
+                        class="w-full min-h-[180px] flex items-center justify-center sm:justify-center md:justify-center lg:justify-evenly xl:justify-between  2xl:justify-between gap-[10px]   bg-inherit sm:bg-inherit md:bg-inherit lg:bg-[#F7F6F3] xl:bg-[#F7F6F3] 2xl:bg-[#F7F6F3] rounded-tl-[12px] rounded-bl-[12px]  
+                    flex-wrap sm:flex-wrap md:flex-wrap lg:flex-nowrap xl:flex-nowrap 2xl:flex-nowrap px-0 sm:px-0 md:px-0   lg:px-[36px] xl:px-[36px] 2xl:px-[36px] mt-[32px]">
+                        <div
+                            class="w-full sm:w-full md:w-full lg:w-[30%] xl:w-[30%] 2xl:w-[30%] h-[99px]  flex flex-col justify-between items-center sm:items-center md:items-center lg:items-start xl:items-start 2xl:items-start   rounded-[8px] bg-[#F7F6F3] pb-3">
+                            <strong class="text-[#333333] text-[48px] font-manrope font-bold ">
+                                55<span class="text-[#5700FF]">+</span>
+                            </strong>
+                            <p class="text-[#4D4D4D] text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
+                                Completed Projects
+                            </p>
+                        </div>
+                        <div class=" w-full sm:w-full md:w-full lg:w-[52%] xl:w-[62%] 2xl:w-[58%] flex justify-between
+                         gap-[10px] sm:gap-[10px] md:gap-[10px] lg:gap-[10%] xl:gap-[10%] 2xl:gap-[10%]">
+                            <div
+                                class="w-[50%] sm:w-[50%] md:w-[50%] lg:w-[172px] xl:w-[172px] 2xl:w-[172px] h-[99px]   flex flex-col justify-center items-center sm:items-center md:items-center lg:items-start xl:items-start 2xl:items-start  rounded-[8px] bg-[#F7F6F3]">
+                                <strong class="text-[#333333] text-[48px] font-manrope font-bold mt-[-10px]">
+                                    20<span class="text-[#5700FF]">+</span>
+                                </strong>
+                                <p
+                                    class="text-[#4D4D4D] text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
+                                    Happy Customers
+                                </p>
+                            </div>
+                            <div
+                                class="w-[50%] sm:w-[50%] md:w-[50%] lg:w-[172px] xl:w-[172px] 2xl:w-[172px] h-[99px]    flex flex-col  items-center sm:items-center md:items-center lg:items-start xl:items-start 2xl:items-start rounded-[8px] bg-[#F7F6F3] ">
+                                <strong class="text-[#333333] text-[48px] font-manrope font-bold ">
+                                    08<span class="text-[#5700FF]">+</span>
+                                </strong>
+                                <p
+                                    class="text-[#4D4D4D] text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
+                                    Years of Experience
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="static sm:static md:static lg:static xl:static 2xl:absolute  w-full sm:w-full md:w-full lg:w-full xl:w-full 2xl:w-[46.5%] h-auto   right-0 top-0 z-0">
+                    <img src="./assets/images/jeferry.png" alt="png" class="w-full h-full z-0">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---------------------------------------/ hero section ended --------------------------------------- -->
 </body>
 <script src="./js/utils.js"></script>
 <script src="./js/app.js"></script>
 
-</html>
+</html>`
