--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <!-- --------------------------------------- hero section started --------------------------------------- -->
-    <section id="hero" class=" relative   px-[20px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
+    <section id="hero" class=" relative   px-[16px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
         <div class="container sm:w-[1596px] mx-auto">
             <div
                 class="wrapper  flex items-center justify-between flex-col-reverse sm:flex-col-reverse md:flex-col-reverse lg:flex-row 2xl:flex-row">
@@ -75,30 +75,30 @@
                 py-0 sm:py-[32px] md:py-[32px] lg:py-[32px] xl:py-[32px] 2xl:py-0">
                     <div
                         class="w-full min-h-[433px]  flex flex-col  items-center sm:items-center md:items-start xl:items-start 2xl:items-start justify-between pt-[46px] sm:pt-[46px] md:pt-0 lg:pt-0 xl:pt-0 2xl:pt-0">
-                        <div class="w-[220px] h-[62px] bg-[#F5F3F0] rounded-[13px] grid place-content-center">
+                        <div class="w-[220px] h-[62px] bg-[#F5F3F0] rounded-[13px] grid place-content-center mt-3">
                             <h4 class="text-[#4D4D4D] font-manrope font-medium text-[28px] leading-[42px]">
                                 Hello There 🤗
                             </h4>
                         </div>
                         <h2
-                            class="text-[#1A1A1A] text-[42px] sm:text-[42px] md:text-[58px] lg:text-[58px] xl:text-[58px] 2xl:text-[58px] font-manrope font-semibold leading-[42px] sm:leading-[44px] md:leading-[52px] lg:leading-[56px] xl:leading-[85px] 2xl:leading-[85px] text-center sm:text-center md:text-left lg:text-left xl:text-left 2xl:text-left">
+                            class="text-[#1A1A1A] text-[42px] sm:text-[42px] md:text-[58px] lg:text-[58px] xl:text-[58px] 2xl:text-[58px] font-manrope font-semibold leading-[42px] sm:leading-[44px] md:leading-[52px] lg:leading-[56px] xl:leading-[85px] 2xl:leading-[85px] text-center sm:text-center md:text-left lg:text-left xl:text-left 2xl:text-left mt-3">
                             Jeffery Cannon Welcome’s You!
                         </h2>
                         <p
-                            class="text-[#4D4D4D] text-[18px] leading-[22px] sm:leading-[22px] md:leading-[27px] lg:leading-[27px] xl:leading-[27px] 2xl:leading-[27px] font-normal font-manrope pr-1 text-center sm:text-center md:text-left lg:text-left xl:text-left 2xl:text-left">
+                            class="text-[#4D4D4D] text-[18px] leading-[22px] sm:leading-[22px] md:leading-[27px] lg:leading-[27px] xl:leading-[27px] 2xl:leading-[27px] font-normal font-manrope pr-1 text-center sm:text-center md:text-left lg:text-left xl:text-left 2xl:text-left mt-3">
                             I am a passionate and experienced web designer, dedicated to creating visually stunning and
                             highly functional websites. Explore my portfolio to see the power of effective design in
                             action
                         </p>
                         <div
-                            class="w-[90%] sm:w-[66%] md:w-[66%] lg:w-[66%] xl:w-[66%] 2xl:w-[50%] h-[64px] flex items-center justify-between">
+                            class="mt-3 w-[100%] sm:w-[66%] md:w-[66%] lg:w-[66%] xl:w-[66%] 2xl:w-[50%] h-[64px] flex items-center justify-between">
                             <button
                                 class="w-[160px] h-[60px] rounded-[8px] flex justify-evenly items-center bg-[#5700FF] hover:bg-[#3546c8] active:bg-[#2b3aad] transition-all duration-300 ease-out">
                                 <img src="./assets/images/navPhone.svg" alt="svg" class="w-[21px] h-[21px]">
                                 <p class="text-[#FDFDFC] font-manrope text-[18px] font-medium">Book a Call</p>
                             </button>
                             <a href="#"
-                                class="text-[#1A1A1A] hover:text-[#353535ad] text-[18px] leading-[27px] font-medium font-manrope">
+                                class="text-[#1A1A1A] hover:text-[#353535ad] ml-1 text-[14px] sm:text-[18px] md:text-[18px] lg:text-[18px] xl:text-[18px] 2xl:text-[18px] leading-[27px] font-medium font-manrope">
                                 View Portfolio ->
                             </a>
                         </div>
@@ -111,7 +111,8 @@
                             <strong class="text-[#333333] text-[48px] font-manrope font-bold ">
                                 55<span class="text-[#5700FF]">+</span>
                             </strong>
-                            <p class="text-[#4D4D4D] text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
+                            <p
+                                class="text-[#4D4D4D] text-[12px] sm:text-[18px] md:text-[18px] lg:text-[18px] xl:text-[18px] 2xl:text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
                                 Completed Projects
                             </p>
                         </div>
@@ -119,11 +120,12 @@
                          gap-[10px] sm:gap-[10px] md:gap-[10px] lg:gap-[10%] xl:gap-[10%] 2xl:gap-[10%]">
                             <div
                                 class="w-[50%] sm:w-[50%] md:w-[50%] lg:w-[172px] xl:w-[172px] 2xl:w-[172px] h-[99px]   flex flex-col justify-center items-center sm:items-center md:items-center lg:items-start xl:items-start 2xl:items-start  rounded-[8px] bg-[#F7F6F3]">
-                                <strong class="text-[#333333] text-[48px] font-manrope font-bold mt-[-10px]">
+                                <strong
+                                    class="text-[#333333] text-[48px] font-manrope font-bold  mt-[-20px] sm:mt-[-20px] md:mt-[-20px] lg:mt-0 xl:mt-0 2xl:mt-0">
                                     20<span class="text-[#5700FF]">+</span>
                                 </strong>
                                 <p
-                                    class="text-[#4D4D4D] text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
+                                    class="text-[#4D4D4D] text-[12px] sm:text-[18px] md:text-[18px] lg:text-[18px] xl:text-[18px] 2xl:text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
                                     Happy Customers
                                 </p>
                             </div>
@@ -133,7 +135,7 @@
                                     08<span class="text-[#5700FF]">+</span>
                                 </strong>
                                 <p
-                                    class="text-[#4D4D4D] text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
+                                    class="text-[#4D4D4D] text-[12px] sm:text-[18px] md:text-[18px] lg:text-[18px] xl:text-[18px] 2xl:text-[18px] leading-[22px] font-manrope font-medium  mt-[-10px]">
                                     Years of Experience
                                 </p>
                             </div>
@@ -148,8 +150,125 @@
         </div>
     </section>
     <!-- ---------------------------------------/ hero section ended --------------------------------------- -->
+
+
+    
+    <!-- --------------------------------------- skills section started --------------------------------------- -->
+    <section id="skills"
+        class="pt-12 sm:pt-12  md:pt-14 lg:pt-14 xl:pt-14 2xl:pt-[240px]   px-[16px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
+        <div class="container sm:w-[1596px] mx-auto ">
+            <div class="wrapper w-full min-h-[840px]  flex-col justify-between">
+                <div class="min-h-[84px]">
+                    <h4 class="text-[#333333] text-[38px] font-semibold font-manrope text-center">
+                        Creative Skills
+                    </h4>
+                    <p class="text-[#4D4D4D] text-[16px] font-manrope font-normal text-center">
+                        As a web designer, I possess a diverse set of skills and expertise to bring your web design
+                        visions to life
+                    </p>
+                </div>
+                <div
+                    class="w-full min-h-[556px]  flex flex-wrap justify-around sm:justify-around md:justify-around lg:justify-around xl:justify-around  2xl:justify-between gap-y-3 mt-6">
+                    <div
+                        class="w-full sm:w-full md:w-[338px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-xl p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                        <div class="w-[77px] h-[77px] bg-[#5700FF] rounded-lg  grid place-content-center">
+                            <img src="./assets/images/skillsLogo1.svg" alt="svg">
+                        </div>
+                        <h4
+                            class="text-[#333333] text-[24px] font-manrope font-semibold text-center leading-[24px] mt-2">
+                            Web Design Principles
+                        </h4>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-center max-w-[412px]">
+                            Proficiency in the fundamental principles of design, such as layout, color theory,
+                            typography, and visual hierarchy.
+                        </p>
+                    </div>
+                    <div
+                        class="w-full sm:w-full md:w-[338px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-xl p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                        <div class="w-[77px] h-[77px] bg-[#5700FF] rounded-lg  grid place-content-center">
+                            <img src="./assets/images/skillsLogo2.svg" alt="svg">
+                        </div>
+                        <h4
+                            class="text-[#333333] text-[24px] font-manrope font-semibold text-center leading-[24px] mt-2">
+                            User Interface - UI Design
+                        </h4>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-center max-w-[412px]">
+                            Ability to create visually appealing and intuitive user interfaces that enhance user
+                            experience and engagement.
+                        </p>
+                    </div>
+                    <div
+                        class="w-full sm:w-full md:w-[338px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-xl p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                        <div class="w-[77px] h-[77px] bg-[#5700FF] rounded-lg  grid place-content-center">
+                            <img src="./assets/images/skillsLogo3.svg" alt="svg">
+                        </div>
+                        <h4
+                            class="text-[#333333] text-[24px] font-manrope font-semibold text-center leading-[24px] mt-2">
+                            User Experience - UX Design
+                        </h4>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-center max-w-[412px]">
+                            Understanding of user behavior and psychology to design seamless user experiences that meet
+                            user needs and goals.
+                        </p>
+                    </div>
+                    <div
+                        class="w-full sm:w-full md:w-[338px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-xl p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                        <div class="w-[77px] h-[77px] bg-[#5700FF] rounded-lg  grid place-content-center">
+                            <img src="./assets/images/skillsLogo4.svg" alt="svg">
+                        </div>
+                        <h4
+                            class="text-[#333333] text-[24px] font-manrope font-semibold text-center leading-[24px] mt-2">
+                            Responsive Web Design
+                        </h4>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-center max-w-[412px]">
+                            Knowledge of designing websites that adapt and function seamlessly across various devices
+                            and screen sizes.
+                        </p>
+                    </div>
+                    <div
+                        class="w-full sm:w-full md:w-[338px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-xl p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                        <div class="w-[77px] h-[77px] bg-[#5700FF] rounded-lg  grid place-content-center">
+                            <img src="./assets/images/skillsLogo15.svg" alt="svg">
+                        </div>
+                        <h4
+                            class="text-[#333333] text-[24px] font-manrope font-semibold text-center leading-[24px] mt-2">
+                            Wireframing and Prototyping
+                        </h4>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-center max-w-[412px]">
+                            Ability to create wireframes and interactive prototypes to visualize and test website
+                            layouts and functionality.
+                        </p>
+                    </div>
+                    <div
+                        class="w-full sm:w-full md:w-[338px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-xl p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                        <div class="w-[77px] h-[77px] bg-[#5700FF] rounded-lg  grid place-content-center">
+                            <img src="./assets/images/skillsLogo6.svg" alt="svg">
+                        </div>
+                        <h4
+                            class="text-[#333333] text-[24px] font-manrope font-semibold text-center leading-[24px] mt-2">
+                            Mobile-Friendly Optimization
+                        </h4>
+                        <p
+                            class="text-[#4D4D4D] text-[18px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-center max-w-[412px]">
+                            Proficiency in the fundamental principles of design, such as layout, color theory,
+                            typography, and visual hierarchy.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---------------------------------------/ skills section ended --------------------------------------- -->
+
+
+
 </body>
 <script src="./js/utils.js"></script>
 <script src="./js/app.js"></script>
 
-</html>`
+</html>
