'Benefits' section added to this project and this section fully ended with RWD

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeferry Cannon</title>
-    <link rel="icon" href="./assets/images/favicon.png">
+    <link rel="icon" href="./assets/images/fav.png">
     <link rel="stylesheet" href="./styles/extrastyles.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -152,7 +152,7 @@
     <!-- ---------------------------------------/ hero section ended --------------------------------------- -->
 
 
-    
+
     <!-- --------------------------------------- skills section started --------------------------------------- -->
     <section id="skills"
         class="pt-12 sm:pt-12  md:pt-14 lg:pt-14 xl:pt-14 2xl:pt-[240px]   px-[16px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
@@ -264,6 +264,104 @@
         </div>
     </section>
     <!-- ---------------------------------------/ skills section ended --------------------------------------- -->
+
+
+    
+    <!-- --------------------------------------- Benefits section started --------------------------------------- -->
+    <section id="benefits" class="pt-[70px]     px-[16px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
+        <div class="container sm:w-[1596px] mx-auto">
+            <div class="wrapper w-full min-h-[934px]  flex flex-col justify-between">
+                <div>
+                    <h4 class="text-[#333333] text-center text-[48px]  font-semibold font-manrope ">
+                        Benefits
+                    </h4>
+                    <p class="text-[#4D4D4D] text-center text-[18px] font-manrope font-normal leading-[27px]">
+                        By choosing my web design service, you'll enjoy the following benefits
+                    </p>
+                </div>
+                <div class=" min-h-[749px] flex flex-col gap-[30px]">
+                    <div
+                        class=" w-full min-h-[301px] flex flex-col sm:flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row justify-between gap-[30px] mt-5">
+                        <div
+                            class="w-full   sm:w-full  md:w-[630px]  lg:w-[630px]   xl:w-[630px] 2xl:w-[783px] rounded-lg     min-h-[301px] bg-[#F7F6F3]  p-[40px] flex flex-col justify-start ">
+                            <h4 class="text-[#333333] text-[20px] font-manrope font-semibold text-left">
+                                Customized Designs Tailored to Your Brand
+                            </h4>
+                            <p
+                                class="text-[#4D4D4D] text-[16px] font-normal font-manrope mt-6 leading-[21px] sm:leading-[24px] md:leading-6 lg:leading-6 xl:leading-6 2xl:leading-6">
+                                I understand the importance of creating a unique and memorable brand identity. By
+                                collaborating closely with you, I ensure that your website reflects your brand's
+                                personality, values, and objectives. The result is a customized design that sets you
+                                apart from the competition and resonates with your target audience.
+                            </p>
+                        </div>
+                        <div
+                            class="w-full   sm:w-full  md:w-[630px]  lg:w-[630px]   xl:w-[630px] 2xl:w-[783px] rounded-lg     min-h-[301px] bg-[#F7F6F3]  p-[40px] flex flex-col justify-start ">
+                            <h4 class="text-[#333333] text-[20px] font-manrope font-semibold text-left">
+                                Creative Excellence that Captivates Visitors
+                            </h4>
+                            <p
+                                class="text-[#4D4D4D] text-[16px] font-normal font-manrope mt-6 leading-[21px] sm:leading-[24px] md:leading-6 lg:leading-6 xl:leading-6 2xl:leading-6">
+                                With a keen eye for aesthetics and a passion for creativity, I excel in designing
+                                visually stunning and engaging websites. By combining beautiful visuals, captivating
+                                typography, and strategic use of color, I create an immersive and impactful user
+                                experience. Your website will leave a lasting impression on visitors, enhancing your
+                                brand's credibility and professionalism.
+                            </p>
+                        </div>
+                    </div>
+                    <div class=" w-full min-h-[389px]  gap-[30px] flex justify-between flex-col sm:flex-col md:flex-col lg:flex-row xl:flex-row 
+                    2xl:flex-row items-center sm:items-center md:items-center  lg:items-stretch xl:items-stretch  2xl:items-stretch">
+                        <div
+                            class="w-full sm:w-full md:w-[600px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-[8px] p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                            <h4
+                                class="text-[#333333]  text-[20px] font-manrope font-semibold text-start leading-[30px] ">
+                                User-Centric Approach for Optimal Experience
+                            </h4>
+                            <p
+                                class="text-[#4D4D4D] text-[16px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-start max-w-[412px]">
+                                I prioritize user experience (UX) design, placing your visitors at the center of the
+                                design process. By conducting in-depth research and employing user testing techniques, I
+                                ensure that your website is intuitive, easy to navigate, and seamlessly guides users
+                                towards their goals. The result is a satisfying user journey that increases engagement
+                                and conversions.
+                            </p>
+                        </div>
+                        <div
+                            class="w-full sm:w-full md:w-[600px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-[8px] p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                            <h4
+                                class="text-[#333333]  text-[20px] font-manrope font-semibold text-start leading-[30px] ">
+                                Mobile-Friendly Designs for Broad Accessibilit
+                            </h4>
+                            <p
+                                class="text-[#4D4D4D] text-[16px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-start max-w-[412px]">
+                                In today's mobile-dominated landscape, having a responsive website is crucial. I
+                                specialize in creating mobile-friendly designs that adapt flawlessly across different
+                                devices and screen sizes. Your website will look and perform beautifully, whether
+                                accessed from a desktop, smartphone, or tablet, ensuring that you reach and engage your
+                                audience effectively.
+                            </p>
+                        </div>
+                        <div
+                            class="w-full sm:w-full md:w-[600px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[389px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-[8px] p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
+                            <h4
+                                class="text-[#333333]  text-[20px] font-manrope font-semibold text-start leading-[30px] ">
+                                Expertise in Cutting-Edge Technologies
+                            </h4>
+                            <p
+                                class="text-[#4D4D4D] text-[16px] font-normal font-manrope leading-[22px] sm:leading-[22px] md:leading-[22px] mt-2 lg:leading-[27px]  xl:leading-[27px] 2xl:leading-[27px] text-start max-w-[412px]">
+                                With a strong command of HTML, CSS, JavaScript, and other front-end technologies, I
+                                possess the technical skills to bring your design concepts to life. From seamless
+                                animations to interactive elements, I leverage the latest web technologies to enhance
+                                user engagement and create a dynamic user experience.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---------------------------------------/ Benefits section ended --------------------------------------- -->
 
 
 
