I added works section to this project and fully ended this section with (RWD)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header" class="  border-b-[1px] border-solid border-[#E1DBD1]">
         <div class="container sm:w-[1596px] mx-auto">
             <nav id="navBar" class="w-full  flex items-center justify-between h-[100px]">
-                <a href="#"
+                <a href="./index.html"
                     class="title text-[#5700FF] font-semibold text-[24px] leading-[32px] font-manrope ml-[20px] sm:ml-0 md:ml-0 lg:ml-0 xl:ml-0 2xl:ml-0">
                     Jeffery Cannon
                 </a>
@@ -57,7 +57,7 @@
                 </div>
                 <span id="menu-button"
                     class="block sm:block md:hidden lg:hidden xl:hidden 2xl:hidden text-[#333333] text-[30px] font-extrabold mr-[20px] sm:mr-0 md:mr-0 lg:mr-0 xl:mr-0 2xl:mr-0">
-                    <i class="bi bi-list"></i>
+                    <img src="./assets/images/menuIcon.svg" alt="svg">
                 </span>
             </nav>
         </div>
@@ -266,7 +266,7 @@
     <!-- ---------------------------------------/ skills section ended --------------------------------------- -->
 
 
-    
+
     <!-- --------------------------------------- Benefits section started --------------------------------------- -->
     <section id="benefits" class="pt-[70px]     px-[16px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
         <div class="container sm:w-[1596px] mx-auto">
@@ -310,7 +310,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class=" w-full min-h-[389px]  gap-[30px] flex justify-between flex-col sm:flex-col md:flex-col lg:flex-row xl:flex-row 
+                    <div
+                        class=" w-full min-h-[389px]  gap-[30px] flex justify-between flex-col sm:flex-col md:flex-col lg:flex-row xl:flex-row 
                     2xl:flex-row items-center sm:items-center md:items-center  lg:items-stretch xl:items-stretch  2xl:items-stretch">
                         <div
                             class="w-full sm:w-full md:w-[600px] lg:w-[413px] xl:w-[413px]  2xl:w-[500px] min-h-[278px] sm:min-h-[278px] md:min-h-[278px] lg:min-h-[268px] xl:min-h-[268px]  2xl:min-h-[334px]  bg-[#F7F6F3] flex flex-col justify-between items-center  rounded-[8px] p-[30px] sm:p-[40px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[50px]">
@@ -363,6 +364,108 @@
     </section>
     <!-- ---------------------------------------/ Benefits section ended --------------------------------------- -->
 
+
+    <!-- --------------------------------------- works section started --------------------------------------- -->
+    <section id="works" class="pt-10 px-[16px] sm:px-0 md:px-0 lg:px-0  xl:px-0 2xl:px-0">
+        <div class="container sm:w-[1596px] mx-auto">
+            <div class="wrapper  min-h-[857px] flex flex-col justify-between items-center">
+                <div class="min-h-[105] ">
+                    <h4 class="text-[#333333] text-[48px] font-manrope font-semibold text-center">
+                        My Works
+                    </h4>
+                    <p class="text-[#4D4D4D] text-[18px] font-normal font-manrope text-center">
+                        Here's what some of my satisfied clients have to say about my work
+                    </p>
+                </div>
+                <div
+                    class="mt-5 w-full min-h-[559px]  flex justify-center 2xl:justify-between gap-[30px] flex-wrap  ">
+                    <div
+                        class="w-full sm:max-w-[90%] md:max-w-[90%] lg:max-w-[90%] xl:max-w-[390px] 2xl:max-w-[490px]  min-h-[547px] bg-[#F7F6F3] rounded-xl flex flex-col justify-between items-center p-[20px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[40px]">
+                        <h5 class="text-[#333333] text-[20px] font-manrope font-semibold">
+                            Z - Aura Perfume Website Design
+                        </h5>
+                        <div
+                            class="workBg w-full sm:w-full md:w-full lg:w-full xl:w-full 2xl:w-[412px] h-[311px] bg-slate-200 relative overflow-hidden rounded-xl ">
+                            <a href="https://www.figma.com/design/nWKXsQvBfnwrVeuhvdxZ1w/Portfolio-Website-UI-Template-Design-in-Light-Theme-(Beige)---FREE-Editable-(Community)-(Copy)?node-id=601-220&node-type=frame&t=TsYvBrDSqJC091HX-0"
+                                class="z-50 absolute right-[10px] bottom-[10px] w-[44px] h-[44px] bg-[#F7F6F3] hover:bg-[#ece9e5] active:bg-[#e4e1db] transition-all duration-200 grid place-content-center rounded-lg border-[2px] border-solid border-[#e6ddd2]">
+                                <img src="./assets/images/arrow45.svg" alt="svg">
+                            </a>
+                        </div>
+                        <div
+                            class="max-w-full sm:max-w-[600px] md:max-w-[700px] lg:max-w-[700px] xl:max-w-full 2xl:max-w-full min-h-[68px] flex justify-between items-center gap-[10px] sm:gap-[20px] md:gap-[20px] lg:gap-[20px] xl:gap-[20px] 2xl:gap-[20px]">
+                            <div class="workSmallBg w-[88px] h-[68px] overflow-hidden rounded-[6px]">
+                            </div>
+                            <div class=" workSmallBg w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                            <div class="workSmallBg w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                            <div class="workSmallBg w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="w-full sm:max-w-[90%] md:max-w-[90%] lg:max-w-[90%] xl:max-w-[390px] 2xl:max-w-[490px]  min-h-[547px] bg-[#F7F6F3] rounded-xl flex flex-col justify-between items-center p-[20px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[40px]">
+                        <h5 class="text-[#333333] text-[20px] font-manrope font-semibold">
+                            Z - Aura Perfume Website Design
+                        </h5>
+                        <div
+                            class="workBg2 w-full sm:w-full md:w-full lg:w-full xl:w-full 2xl:w-[412px] h-[311px] bg-slate-200 relative overflow-hidden rounded-xl ">
+                            <a href="https://www.figma.com/design/nWKXsQvBfnwrVeuhvdxZ1w/Portfolio-Website-UI-Template-Design-in-Light-Theme-(Beige)---FREE-Editable-(Community)-(Copy)?node-id=601-624&node-type=frame&t=m1VuIIl3WZkLj92C-0"
+                                class="z-50 absolute right-[10px] bottom-[10px] w-[44px] h-[44px] bg-[#F7F6F3] hover:bg-[#ece9e5] active:bg-[#e4e1db] transition-all duration-200 grid place-content-center rounded-lg border-[2px] border-solid border-[#e6ddd2]">
+                                <img src="./assets/images/arrow45.svg" alt="svg">
+                            </a>
+                        </div>
+                        <div
+                            class="max-w-full sm:max-w-[600px] md:max-w-[700px] lg:max-w-[700px] xl:max-w-full 2xl:max-w-full min-h-[68px] flex justify-between items-center gap-[10px] sm:gap-[20px] md:gap-[20px] lg:gap-[20px] xl:gap-[20px] 2xl:gap-[20px]">
+                            <div class="workSmallBg2 w-[88px] h-[68px] overflow-hidden rounded-[6px]">
+                            </div>
+                            <div class="workSmallBg2  w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                            <div class="workSmallBg2 w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                            <div class="workSmallBg2 w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="w-full sm:max-w-[90%] md:max-w-[90%] lg:max-w-[90%] xl:max-w-[390px] 2xl:max-w-[490px]  min-h-[547px] bg-[#F7F6F3] rounded-xl flex flex-col justify-between items-center p-[20px] md:p-[40px] lg:p-[40px] xl:p-[40px] 2xl:p-[40px]">
+                        <h5 class="text-[#333333] text-[20px] font-manrope font-semibold">
+                            Z - Aura Perfume Website Design
+                        </h5>
+                        <div
+                            class="workBg3 w-full sm:w-full md:w-full lg:w-full xl:w-full 2xl:w-[412px] h-[311px] bg-slate-200 relative overflow-hidden rounded-xl ">
+                            <a href="https://www.figma.com/design/nWKXsQvBfnwrVeuhvdxZ1w/Portfolio-Website-UI-Template-Design-in-Light-Theme-(Beige)---FREE-Editable-(Community)-(Copy)?node-id=601-343&node-type=frame&t=m1VuIIl3WZkLj92C-0"
+                                class="z-50 absolute right-[10px] bottom-[10px] w-[44px] h-[44px] bg-[#F7F6F3] hover:bg-[#ece9e5] active:bg-[#e4e1db] transition-all duration-200 grid place-content-center rounded-lg  border-[2px] border-solid border-[#e6ddd2]">
+                                <img src="./assets/images/arrow45.svg" alt="svg">
+                            </a>
+                        </div>
+                        <div
+                            class="max-w-full sm:max-w-[600px] md:max-w-[700px] lg:max-w-[700px] xl:max-w-full 2xl:max-w-full min-h-[68px] flex justify-between items-center gap-[10px] sm:gap-[20px] md:gap-[20px] lg:gap-[20px] xl:gap-[20px] 2xl:gap-[20px]">
+                            <div class="workSmallBg3 w-[88px] h-[68px] overflow-hidden rounded-[6px]">
+                            </div>
+                            <div
+                                class="workSmallBg3 workSmallBg w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                            <div class="workSmallBg3 w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                            <div class="workSmallBg3 w-[88px] h-[68px] overflow-hidden rounded-[6px] bg-[#00000066] ">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#"
+                    class="mt-5 w-[208px] h-[64px] rounded-[8px] flex justify-evenly items-center bg-[#5700FF] hover:bg-[#3546c8] active:bg-[#2b3aad] transition-all duration-300 ease-out">
+                    <p class="text-[#FDFDFC] font-manrope text-[18px] font-medium">View All Projects -></p>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- ---------------------------------------/ works section ended --------------------------------------- -->
+
+
+
+     <!-- --------------------------------------- works section ended --------------------------------------- -->
+     <!-- ---------------------------------------/ works section ended --------------------------------------- -->
 
 
 </body>
